# mcallisterjp.github.io

./: .gitignore  .gitmodules  .travis.yml  about.html  about.rst  archive.html  contact.html  index.html  my-hakyll.cabal  site.hs  stack.yaml
css/: haskell.org.css
posts/: 2017-05-18-may.html  2017-05-18-may.md  faq.html  faq.md
templates/: default.html  index.html
