name:               my-hakyll
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base
                  , text
                  , hakyll
                  , pandoc >= 2.0
                  , pandoc-types
  ghc-options:      -threaded
  default-language: Haskell2010
